erDiagram
    USERS ||--o{ TRANSACTIONS : "processes"
    USERS ||--o{ STOCK_HISTORY : "records"
    USERS ||--o{ EXPENSES : "records"
    
    CUSTOMERS ||--o{ TRANSACTIONS : "makes"
    CUSTOMERS ||--o{ INVENTORY : "holds"
    
    PRODUCTS ||--o{ INVENTORY : "stocked_as"
    PRODUCTS ||--o{ TRANSACTIONS : "sold_in"
    PRODUCTS ||--o{ STOCK_HISTORY : "tracked_in"

    USERS {
        int id PK
        string full_name
        string email
        string password_hash
        enum role
        bool is_active
        timestamp created_at
        timestamp updated_at
    }

    CUSTOMERS {
        int id PK
        string full_name
        string phone
        string email
        text address
        timestamp created_at
        timestamp updated_at
    }

    PRODUCTS {
        int id PK
        string name
        string size
        string size_key
        decimal price_refill
        decimal price_borrow
        bool is_active
        timestamp created_at
        timestamp updated_at
    }

    INVENTORY {
        int id PK
        int product_id FK
        string serial_number
        enum status
        int customer_id FK
        timestamp last_updated
        timestamp created_at
    }

    TRANSACTIONS {
        int id PK
        string invoice_number
        enum transaction_type
        int customer_id FK
        string customer_name
        string customer_phone
        text customer_address
        int product_id FK
        string product_size
        int quantity
        decimal unit_price
        decimal total_amount
        enum payment_method
        decimal amount_paid
        decimal change_amount
        enum delivery_type
        int cashier_id FK
        string cashier_name
        enum status
        text notes
        timestamp transaction_date
        timestamp created_at
        timestamp updated_at
    }

    STOCK_HISTORY {
        int id PK
        int product_id FK
        enum action
        int quantity
        int previous_stock
        int new_stock
        int user_id FK
        text notes
        timestamp created_at
    }

    EXPENSES {
        int id PK
        string description
        decimal amount
        string category
        int user_id FK
        date expense_date
        timestamp created_at
    }
